[package]
name = "adxl345"
version = "0.0.3"
authors = ["kjartan"]
edition = "2018"
license = "MIT"
description = "adxl345 driver for the rpi"
documentation = "https://google.com"
repository = "https://github.com/KjartanKlein/ADXL345_RUST"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = "0.11.3"
